--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "testchrmewithGit28",
   "version": "1.0.0",
   "dependencies": {
-    "npm-run-path": "4.0.0"
+    "npm-run-path": "4.0.0",
+    "test": "0.6.0"
   },
   "devDependencies": {}
 }
