--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
     "npm-run-path": "4.0.0",
     "test": "0.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "aws-sdk": "2.176.0"
+  }
 }
